fixed the stage has scrollbars under the elements in firefox

--- a/src/css/stage.less
+++ b/src/css/stage.less
@@ -59,6 +59,7 @@
   padding: 5px 30px 30px 30px;
   position: absolute !important;
   min-width: 100%;
+  z-index: 0;
 }
 .silex-stage {
   background-color: #CCCCCC;
